# iSDF

./: .gitignore  README.md  cal_wnf.py  config.json  dataloader.py  dtype_utils.py  example.py  field.py  git_backup.py  network.py  process_all_meshes.py  requirements.txt  tools.py  train_mix.py  ttt.xyz  ttt.xyz.npy  update_normal.py  view.py  voxel_point.py
config/: base_config.json  decoder_config.json  encoder_config.json  mixVoxelGridVAE.json  test_config.json  train_config.json  voxelGridVAE.json
data_util/: README_surface_sampling.md  __init__.py  dataloader.py  example_surface_sampling.py  surface_sampling_dataloader.py  test_surface_sampling.py
mesh_partition_module/: README.md  __init__.py  examples.py  mesh_partition.cpp  mesh_partition.py  pyproject.toml  setup.py  test_mesh_partition.py
models/: __init__.py
models/lzd_models/: __init__,py  network.py  slat_cnn.py  slat_decoder.py  slat_net.py
models/module/: pointnet.py
pipline/: README_train_per_pc.md  config.py  iSDF.py  test.py  train_ae.py  train_mix.py  train_per_pc.py
